#Brian Hosler
#January 2022

[metadata]
name = datasak
version = 0.0.1
description = ""
url = https://github.com/3chosler
author = Brian Hosler
author_email = brian.c.hosler@gmail.com

[options]
packages = datasak, datasak.record, datasak.app
install_requires =
	numpy
	opencv-python
	tensorflow
	tqdm
	hos264

[options.entry_points]
console_scripts =
	datasak = rename.app.cli:main
